<resources>
    <string name="app_name">我的应用</string>

    <!--===================AppItem===============================-->
    <string name="package_default">com.example.mengfly.test</string>
    <string name="app_name_default">测试的App</string>
    <string name="search">搜索</string>

    <string name="press_down">向下滑动显示搜索框</string>

    <string name="app_desc">查看手机中的应用，就这么方便、快速、简单</string>

    <!--====================== MainMenu========================-->
    <string name="menu_open_app">打开</string>
    <string name="menu_share">分享</string>
    <string name="menu_out">提取app</string>
    <string name="menu_uninstall">卸载</string>
    <string name="menu_show_market">在应用商店中查看</string>
    <string name="menu_top">置顶</string>
    <string name="menu_un_top">取消置顶</string>
    <string name="menu_show_system">在系统中查看</string>
    <string name="menu_show">查看</string>

    <!--========================MainSpinnerMenu=====================-->


    <!--=======================Content=============================-->
    <string name="content_menu">menu</string>
    <string name="content_icon">icon</string>
    <string name="see_extra_apk">查看导出的安装包</string>

    <!--======================SettingsItem=========================-->
    <string name="see_uninstall_app">查看已卸载的App</string>
    <string name="evaluate_app">评价应用</string>
    <string name="see_source">查看应用源代码</string>
    <string name="license">License</string>
    <string name="linceseLitePal">LitePal is an open source Android library that allows developers to use SQLite database extremely easy. You can finish most of the database operations without writing even a SQL statement, including create or upgrade tables, crud operations, aggregate functions, etc. The setup of LitePal is quite simple as well, you can integrate it into your project in less than 5 minutes.</string>

</resources>
