<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffff"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingTop="40dp">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/content_icon"
        android:src="@mipmap/ic_app" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textColor="@color/colorTextMain"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/app_desc"
        android:textColor="@color/colorTextSecond"
        android:textSize="12sp" />


</LinearLayout>